2000-12-04  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-msg.el (gnus-msg-mail): COMPOSEFUNC should return t if
	succeed.
	(gnus-setup-message): Remove a hack.
	* gnus-win.el (gnus-configure-windows): Make sure
	nntp-server-buffer is live.
	(gnus-remove-some-windows): switch-to-buffer -> set-buffer.

2000-12-04  Andreas Jaeger  <aj@suse.de>

	* gnus-msg.el (gnus-summary-mail-forward): Fix typos in description.

2000-11-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* gnus-msg.el (gnus-group-posting-charset-alist): No longer allow
	raw 8-bit in headers in dk.* newsgroups.

2000-11-30  Dave Love  <fx@gnu.org>

	* message.el (message-auto-save-directory): Use
	file-name-as-directory.
	(message-set-auto-save-file-name): Create
	message-auto-save-directory if necessary.
	(message-replace-chars-in-string): Removed -- unused.
	(message-mail-alias-type): Customize.
	(message-headers): Remove duplicate defgroup.

2000-11-29  Dave Love  <fx@gnu.org>

	* qp.el (quoted-printable-decode-region): Use error, not message
	to report malformed text (like base64).  Amend message.

2000-11-29  Miles Bader  <miles@gnu.org>

	* message.el (message-header-lines): Fontify tag.

2000-11-27  Dave Love  <fx@gnu.org>

	* nnlistserv.el: Ignore errors when requiring nnweb and avoid a
	compiler warning.

2000-11-26  Dave Love  <fx@gnu.org>

	* mm-uu.el (mm-uu-configure-list): Fix typo in :type.

2000-11-23  Dave Love  <fx@gnu.org>

	* uu-post.pbm, uu-decode.pbm: new files from XPMs.

	* mm-uu.el (uudecode): Require.
	(uudecode-decode-region, uudecode-decode-region-external): Don't
	autoload.
	(mm-uu-copy-to-buffer): Doc fix.
	(mm-uu-decode-function, mm-uu-binhex-decode-function): Doc, custom
	type fix.

	* mailcap.el: Doc fixes.
	(mailcap-mime-data): Various adjustments.
	(mailcap): New group.
	(mailcap-download-directory): Customize.
	(mailcap-generate-unique-filename, mailcap-binary-suffixes)
	(mailcap-temporary-directory): Deleted (unused).
	(mailcap-unescape-mime-test): Simplify slightly.